# Supermarket1

./: Dockerfile  FIX_GUIDE.md  README.md  app.py  download  inference.py  openenv.yaml  openenv_fixed.yaml  pyproject.toml  requirements.txt  supermart_env.py
